--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
     padding-left: 10px;
     padding-right: 10px;
 }
+
 .button {
     height: 40px;
     padding: 0 30px;
@@ -41,20 +42,23 @@ body {
     border: 0;
     cursor: pointer;
 }
+
 .button:hover {
     background-color: var(--color-main-dark);
 }
+
 .button--stroke {
     background: transparent;
     border: 1px solid var(--color-main);
     color: var(--color-main);
 }
+
 .button--stroke:hover {
     background: transparent;
     box-shadow: inset 0 0 0 1px var(--color-main);
 }
 
-                                                                /* Style Header */
+<!-- Style Header -->
 
 .header {
     position: fixed;
@@ -67,6 +71,7 @@ body {
     border-bottom: 1px solid rgba(255 255 255 / 0.2);
     transition: 0.5s;
 }
+
 .header.is-sticky {
     background-color: #000;
     height: 80px;
@@ -94,7 +99,7 @@ body {
     margin-right: 10px;
 }
 
-.logo span{
+.logo span {
     margin-right: 5px;
     color: var(--color-main);
 }
@@ -102,6 +107,7 @@ body {
 .menu {
     height: 100%;
 }
+
 .menu-list {
     height: 100%;
     display: flex;
@@ -110,9 +116,11 @@ body {
     margin: 0;
     padding: 0;
 }
+
 .menu-list li {
     height: 100%;
 }
+
 .menu-list a {
     height: 100%;
     font-size: 16px;
@@ -157,6 +165,7 @@ body {
     text-align: center;
     margin: 0;
 }
+
 .hero-text {
     font-size: 16px;
     color: #fff;
@@ -165,12 +174,14 @@ body {
     max-width: 1000px;
     margin: 20px auto;
 }
+
 .hero-buttons {
     display: flex;
     gap: 20px;
     justify-content: center;
     margin-top: 40px;
 }
+
 .hero-button {
     width: 220px;
     height: 66px;
@@ -184,14 +195,17 @@ body {
     font-weight: bold;
     color: #000;
 }
+
 .hero-button-1 {
     background-color: var(--color-main);
     color: #fff;
 }
+
 .hero-button-2 {
     background-color: #fff;
     color: var(--color-main);
 }
+
 .hero-arrow {
     height: 55px;
     width: 55px;
@@ -207,7 +221,7 @@ body {
     translate: -50% 50%;
 }
 
-                                                        /* Style Blog */
+<!-- Style Blog -->
 
 .section {
     padding: 90px 0;
@@ -222,6 +236,7 @@ body {
     align-items: center;
     gap: 15px;
 }
+
 .section-title::before,
 .section-title::after {
     content: "";
@@ -230,6 +245,7 @@ body {
     background: var(--color-main);
     border-radius: 8px;
 }
+
 .blog-list {
     display: flex;
     gap: 20px;
@@ -239,11 +255,13 @@ body {
     width: 100%;
     height: auto;
 }
+
 .blog-post-title {
     font-size: 19px;
     text-transform: uppercase;
     color: #333;
 }
+
 .blog-post-text {
     font-size: 14px;
     line-height: 19px;
@@ -252,11 +270,12 @@ body {
     margin-bottom: 25px;
 }
 
-                                                    /* Style Service */
+<!-- Style Service -->
 
 .section-service {
     background-color: var(--color-bg);
 }
+
 .section-service .section-title {
     color: #fff;
 }
@@ -270,6 +289,7 @@ body {
     align-items: center;
     gap: 15px;
 }
+
 .section-title::before,
 .section-title::after {
     content: "";
@@ -278,10 +298,12 @@ body {
     background: var(--color-main);
     border-radius: 8px;
 }
+
 .service-list {
     display: flex;
     gap: 20px;
 }
+
 .service-post {
     display: flex;
     flex-direction: column;
@@ -292,12 +314,14 @@ body {
     width: 170px;
     height: 170px;
 }
+
 .service-post-title {
     align-items: center;
     font-size: 19px;
     text-transform: uppercase;
     color: #fff;
 }
+
 .service-post-text {
     text-align: center;
     font-size: 14px;
@@ -307,15 +331,17 @@ body {
     margin-bottom: 25px;
 }
 
-                                                        /* Style Contact */
+<!-- Style Contact -->
 
 .contact-form-box {
     display: flex;
     gap: 20px;
 }
+
 .contact-form-box-img {
     flex: 1;
 }
+
 .contact-form-box-img img {
     width: 100%;
     height: auto;
@@ -324,17 +350,21 @@ body {
 .form {
     flex: 1;
 }
+
 .form-row {
     margin-bottom: 20px;
 }
+
 .form-row-last {
     display: flex;
     justify-content: right;
 }
+
 .form-label {
     position: absolute;
     left: -999999px;
 }
+
 .form-control {
     height: 40px;
     border: 1px solid #D1D1D1;
@@ -342,21 +372,25 @@ body {
     padding: 0 10px;
     width: 100%;
 }
+
 .form-control:is(textarea) {
     height: 140px;
     padding: 10px;
     resize: none;
 }
+
 .form-control:focus {
     border-color: var(--color-main);
     outline: 1px solid var(--color-main);
 }
+
 .form-checkbox {
     font-size: 12px;
     display: flex;
     gap: 10px;
     cursor: pointer;
 }
+
 .form-checkbox input {
     flex-shrink: 0;
     height: 22px;
@@ -365,18 +399,20 @@ body {
     border-radius: 8px;
     appearance: none;
 }
+
 .form-checkbox input:checked {
     background-image: url(../images/icon-check.svg);
     background-position: center;
     background-repeat: no-repeat;
 }
 
-                                                            /* Style Footer */
+<!-- Style Footer -->
 
 .footer {
     background: var(--color-bg);
     padding: 40px 0;
 }
+
 .footer-logo {
     font-size: 25px;
     text-transform: uppercase;
@@ -387,13 +423,16 @@ body {
     align-items: center;
     margin-bottom: 20px;
 }
+
 .footer-logo img {
     margin-right: 10px;
 }
+
 .footer-logo span {
     margin-right: 5px;
     color: var(--color-main);
 }
+
 .footer-bottom {
     display: flex;
     justify-content: space-between;
@@ -408,9 +447,11 @@ body {
     margin: 0;
     gap: 5px;
 }
+
 .footer-menu-list li {
     width: calc(50% - 5px);
 }
+
 .footer-menu-list a {
     font-size: 14px;
     text-transform: uppercase;
@@ -419,9 +460,11 @@ body {
     text-decoration: none;
     transition: 0.2s;
 }
+
 .footer-menu-list a:hover {
     color: var(--color-main);
 }
+
 .footer-text {
     font-size: 12px;
     color: #D1D1D1;
